--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -7,7 +7,9 @@
     --low-color: #FF7500;
     --norm-color: #DCDC5A;
     --high-color: #00E900;
-
+    --standard-color: #68A9F8;
+    --vip-color: #85CF68;
+    
     --card-max-width: 300px;
     --border-radius: 5px;
     --movies-gap: 40px;
@@ -27,6 +29,18 @@ body {
     letter-spacing: 0.5px;
     position: relative;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .t-c-low {
     color: var(--low-color);
 }
